# pow-lotto

./: README.md  client.py  evaluate.py  main.py  multiple_clients.py  pyproject.toml
client/: controller.py  dispatcher.py
client/controller/: base.py  player.py
client/dispatcher/: base.py  ws.py
client/messages/: server.py
proyecto/: dispatcher.py  events.py  models.py  parser.py  utils.py
proyecto/messages/: handler.py  request.py  response.py
proyecto/routes/: handler.py
server/: dispatcher.py  events.py  models.py  parser.py  utils.py
server/messages/: handler.py  request.py  response.py
server/routes/: handler.py
